fix layout bug on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -21,6 +21,10 @@ h1 {
     font-size: 36px;
 }
 
+footer {
+    width: 100%;
+}
+
 .center-text {
     text-align: center;
     margin: auto;
